<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.AccountModificationActivity">

    <ScrollView
        android:id="@+id/scrollview_ecran"
        style="@android:style/Widget.Material.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alwaysDrawnWithCache="true"
        android:animateLayoutChanges="true"
        android:animationCache="true"
        android:clipChildren="false"
        android:fadeScrollbars="true"
        android:fadingEdge="horizontal|vertical"
        android:scrollbarStyle="insideOverlay"
        android:visibility="visible" tools:targetApi="lollipop">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/titre_page_compte_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/modifiez_le_compte_d_un_adherent"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"/>


            <TextView
                android:id="@+id/personnel_titre_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/personnel"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                />

            <TextView
                android:id="@+id/titre_prenom_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:shadowColor="@color/colorAccent"
                android:text="@string/prenom"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/prenom_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="45dp"
                    android:layout_marginStart="45dp"
                    android:enabled="false"
                    android:inputType="text"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/titre_nom_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:shadowColor="@color/colorAccent"
                android:text="@string/nom"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nom_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="45dp"
                    android:layout_marginStart="45dp"
                    android:enabled="false"
                    android:inputType="text"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <!--            &lt;!&ndash; PROGRESS BAR &ndash;&gt;
                        <ProgressBar
                            android:id="@+id/profile_activity_progress_bar"
                            android:layout_width="30dip"
                            android:layout_height="30dip"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:visibility="invisible"/>-->

            <TextView
                android:id="@+id/plongee_titre_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:text="@string/plongee"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                />

            <TextView
                android:id="@+id/titre_numero_licence_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:shadowColor="@color/colorAccent"
                android:text="@string/numero_de_licence_optionnel"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/licence_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="45dp"
                    android:layout_marginStart="45dp"
                    android:enabled="false"
                    android:inputType="text"
                    android:lines="1"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/titre_niveau_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:shadowColor="@color/colorAccent"
                android:text="@string/niveau_de_plongee_acquis"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/niveau_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="150dp"
                android:layout_marginStart="70dp"
                android:fadeScrollbars="true"
                android:minHeight="40dp"
                android:visibility="visible"/>

            <LinearLayout
                android:id="@+id/linearLayoutFonctionAdherent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titre_fonction_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="10dp"
                    android:shadowColor="@color/colorAccent"
                    android:text="@string/fonction_au_sein_du_club"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"/>

                <Spinner
                    android:id="@+id/fonction_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="150dp"
                    android:layout_marginStart="70dp"
                    android:fadeScrollbars="true"
                    android:minHeight="40dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/compte_titre_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/compte"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"
                />

            <TextView
                android:id="@+id/titre_email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:shadowColor="@color/colorAccent"
                android:text="@string/email"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="45dp"
                    android:layout_marginStart="45dp"
                    android:enabled="false"
                    android:inputType="textPassword|textVisiblePassword"
                    android:lines="1"
                    android:visibility="visible"/>

            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/holo_green_light"
                android:clickable="false"
                android:foregroundGravity="center"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/modificiation_compte_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:height="60dp"
                android:background="@color/colorPrimary"
                android:text="@string/modifiez_le_compte"
                android:textColor="@android:color/white"/>

<!--            <Button
                android:id="@+id/suppression_compte_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@color/colorPrimary"
                android:text="Supprimez le compte"
                android:textColor="@android:color/white"/>-->

        </LinearLayout>

    </ScrollView>

<!--    <EditText
        android:id="@+id/alertdialog_ok_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="@android:dimen/notification_large_icon_height"
        android:text="@string/alertDialog_delete"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/alertdialog_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@android:dimen/notification_large_icon_height"
        android:inputType="text"
        android:text="@string/alertDialog_cancel"
        android:visibility="invisible"/>-->

</LinearLayout>