<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.androidf.com/tools"
    xmlns:tools2="http://schemas.android.com/tools"
    android:id="@+id/main_activity_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="30dp"
    android:layout_marginStart="30dp"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools2:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/connexion_presentation_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:enabled="false"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/titre_app"
                android:textColor="@android:color/black"
                android:textIsSelectable="false"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/connection_valid_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="80dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:minHeight="80dp"
                android:textSize="15dp"
                android:text="@string/connectez_vous"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/deconnexion_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="120dp"
                android:background="@color/colorPrimary"
                android:text="@string/deconnectez_vous"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/test_coordinator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>